--- a/src/About.css
+++ b/src/About.css
@@ -1,12 +1,13 @@
 .header {
+  display: flex;
   background-color: #f4f8fa;
-  padding: 5em 5em;
+  padding: 2em 2em;
   border-bottom: 1.5px solid rgb(213, 213, 213);
   margin-bottom: 2em;
 }
 
 .headshot {
-  width: 20em;
-  /* height: 22em; */
+  width: 15em;
+  margin-right: 10px;
   overflow: hidden;
 }
