--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,10 @@
   width: 100%;
   height: 100%;
 }
+
+p {
+  font-size: 1.25em;
+  font-weight: 500;
+  font-family:'Cormorant Garamond';
+  color: rgb(1, 1, 1);
+}
