Updates to about page content and styling

--- a/src/About.css
+++ b/src/About.css
@@ -65,9 +65,10 @@
 
 .about-link-container a i {
   font-size: 2.75em;
+  color:rgb(62, 61, 61);
 }
 
-i:hover {
+.about-link-container a i:hover {
   animation: icon-expand 2s infinite;
 }
 
