--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -1,25 +1,39 @@
 .portfolio-header {
-  background: url('./images/portfolio_images/blue.png') no-repeat;
-  background-position: center 60%;
-  color:#FFF;
+  position: relative;
   height: 100vh;
+  background: rgb(0, 0, 0);
+  overflow: hidden;
   margin-bottom: 3em;
 }
 
 .portfolio-header h1 {
-  padding-top: 100px;
-  padding-bottom: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-top: 150px;
+  text-align: center;
+  z-index: 2;
+  position: relative;
+  color: #fff;
   font-family: 'Noto Serif';
   font-weight: 700;
   font-size: 3.5em;
 }
 
 .portfolio-header h3 {
+  padding: 20px;
+  text-align: center;
+  z-index: 2;
+  position: relative;
+  color: #fff;
   font-family: 'Cormorant Garamond';
   font-weight:700;
   font-size: 2em;
+}
+
+.portfolio-header img {
+  position: absolute;
+  left: 0;
+  top: -20%;
+  z-index: 1;
+  opacity: 0.5;
 }
 
 /* -webkit-clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
