--- a/src/About.css
+++ b/src/About.css
@@ -1,27 +1,26 @@
-.header {
+.about-header {
   display: flex;
   background-color: #f4f8fa;
   padding: 2em 2em;
   border-bottom: 1.5px solid rgb(213, 213, 213);
   margin-bottom: 2em;
   justify-content: center;
-  /* flex-wrap: nowrap; */
   align-items: center;
   text-align: left;
 }
 
-.header-desc {
+.about-header-desc {
   max-width: 30em;
 }
 
-.header-title {
+.about-header-title {
   font-family: 'Noto Serif';
   font-weight: 700;
   font-size: 3.5em;
   color:rgb(62, 61, 61);
 }
 
-.header-subtitle {
+.about-header-subtitle {
   font-size: 1.5em;
   font-family: 'Cormorant Garamond';
   font-weight:700;
@@ -37,7 +36,6 @@
 .body {
   display: flex;
   justify-content: center;
-  flex-wrap: nowrap;
   align-items: flex-start;
   text-align: left;
 }
