--- a/src/About.css
+++ b/src/About.css
@@ -1,3 +1,5 @@
+/* HEADER SECTION */
+
 .about-header {
   display: flex;
   background-color: #f4f8fa;
@@ -33,17 +35,20 @@
   overflow: hidden;
 }
 
+/* BODY SECTION */
+
 .body {
   display: flex;
   justify-content: center;
   align-items: flex-start;
   text-align: left;
+  margin-bottom: 3em;
 }
 
 .section-header {
-  font-size: 1.5em;
+  font-size: 2em;
   font-family: 'Noto Serif';
-  color:rgb(62, 61, 61);
+
   margin-bottom: 1em;
 }
 
@@ -61,7 +66,7 @@
   padding-bottom: 2em;
 }
 
-.about-link-container a i {
+.about-link-container a i, .about-link-container.fa-github {
   font-size: 2.75em;
   color:rgb(62, 61, 61);
 }
