--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -65,6 +65,7 @@ div.item {
   float: left;
   overflow: hidden;
   margin-top: 100px;
+  margin-bottom: 50px;
   min-width: 400px;
   max-width: 700px;
   width: 100%;
@@ -97,6 +98,10 @@ div.item:hover a i {
 }
 
 /* LANGLY SPECIFIC */
+.langly-left {
+  display: flex;
+  flex-wrap: wrap;
+}
 
 .langly-item {
   background: #000;
@@ -136,6 +141,26 @@ div.item:hover a i {
   color: rgb(255, 255, 255);
   transform: translate(-50%, -50%) scale(0);
   transition: transform 300s 0ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+}
+
+/* TECH LOGOS */
+
+.tech-logos {
+  text-align: left;
+}
+
+.tech-logos img { 
+  height: 80px;
+  width: auto;
+  padding: 10px;
+}
+
+.relish-logos img {
+  margin: 0 5px;
+}
+
+#js-html-css {
+  height: 88px;
 }
 
 /* PORTFOLIO DESCRIPTIONS */
