--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -8,25 +8,25 @@
 }
 
 .portfolio-hero h1 {
-  padding-top: 150px;
+  padding-top: 400px;
   text-align: center;
   z-index: 2;
   position: relative;
-  color: #fff;
+  color: rgb(237, 237, 237);
   font-family: 'Noto Serif';
   font-weight: 700;
   font-size: 3.5em;
 }
 
 .portfolio-hero h3 {
-  padding: 20px;
+  /* padding: 10px; */
   text-align: center;
   z-index: 2;
   position: relative;
-  color: #fff;
+  color: rgb(237, 237, 237);
   font-family: 'Cormorant Garamond';
   font-weight:700;
-  font-size: 2em;
+  font-size: 1.75em;
 }
 
 .portfolio-hero img {
@@ -35,7 +35,7 @@
   left: 0;
   top: -20%;
   z-index: 1;
-  opacity: 0.5;
+  opacity: 0.4;
 }
 
 /* PORTFOLIO PROJECT INSTANCES */
