--- a/src/Blog.css
+++ b/src/Blog.css
@@ -10,7 +10,15 @@
   height: 100vh;
   background: rgb(0, 0, 0);
   overflow: hidden;
-  /* margin-bottom: 3em; */
+}
+
+.blog-hero img {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: -20%;
+  z-index: 1;
+  opacity: 0.6;
 }
 
 .blog-hero h1 {
@@ -36,15 +44,6 @@
   font-size: 1.75em;
 }
 
-.blog-hero img {
-  position: absolute;
-  width: 100%;
-  left: 0;
-  top: -20%;
-  z-index: 1;
-  opacity: 0.6;
-}
-
 /* BLOG POSTS */
 .blog-body {
   height:100%;
@@ -62,12 +61,55 @@
   flex: 0 0 0%;
 }
 
-.card-image {
+/* CARD DECK OUTRO */
+.deck-end {
+  position: relative;
   background: #fff;
+  width: 100%;
+  height: 100vh;
+  margin: 50px;
+  flex: 1 0 0%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.256);
+  /* padding:0; */
 }
 
-.card-image * {
-  transition: all .5s ease-in-out;
+.deck-end img {
+  position: absolute;
+  padding: 3em;
+  width: 100%;
+  height: 100%;
+  min-height: 400px;
+  left: 0;
+  z-index: 1;
+  opacity: 0.6;
+  filter: grayscale(100%);
+}
+
+.deck-end h1 {
+  text-align: center;
+  z-index: 2;
+  position: relative;
+  top: 18%;
+  left: 5%;
+  color: rgb(52, 52, 52);
+  font-family: 'Noto Serif';
+  font-weight: 400;
+  font-size: 4em;
+}
+
+/* CARD IMAGE HOVER */
+.card-image-item {
+  background: #fff;
+  position: relative;
+  float: left;
+  overflow: hidden;
+  /* min-width: 220px; */
+  width: 100%;
+  text-align: center;
+}
+
+.card-image-item * {
+  transition: all .35s ease-in-out;
 }
 
 .card-img {
@@ -75,25 +117,17 @@
   filter: grayscale(100%);
 }
 
-.team-logo {
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  height: 100px;
-  width: auto;
-  transform: translate(-50%, -50%) scale(1);
-  /* transition: transform 300ms 100ms cubic-bezier(0.175, 0.885, 0.32, 1.275); */
-}
 
-.card-img:hover {
+.card-image-item:hover a img {
   opacity: 1;
-  filter: none;
-  transition: transform 3s 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  filter: grayscale(0%);
 }
 
-.card-img:hover .team-logo {
-  transform: translate(-50%, -50%) scale(0);
-  transition: transform 3s 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+/* CARD TEXT & BUTTON */
+.team-logo {
+  position: relative;
+  height: 70px;
+  width: auto;
 }
 
 #title {
@@ -109,6 +143,6 @@
 }
 
 #button {
-  background-color: #308ff5;
-  border: 1px solid #144a83;
+  background-color:rgb(85, 85, 85);
+  border: 1px solid rgb(62, 61, 61);
 }
