fixing flexibility of hero imgs

--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -1,41 +1,32 @@
 /* PORTFOLIO HERO BANNER */
 .portfolio-hero {
-  position: relative;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
-  background: rgb(0, 0, 0);
-  overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.34),rgba(0, 0, 0, 0.34)), url('./images/portfolio_images/blue.jpg');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .portfolio-hero h1 {
-  padding-top: 400px;
-  text-align: center;
-  z-index: 2;
-  position: relative;
   color: rgb(237, 237, 237);
   font-family: 'Noto Serif';
   font-weight: 700;
   font-size: 3.5em;
+  margin-bottom: 0.5em;
 }
 
 .portfolio-hero h3 {
-  /* padding: 10px; */
-  text-align: center;
-  z-index: 2;
-  position: relative;
   color: rgb(237, 237, 237);
   font-family: 'Cormorant Garamond';
   font-weight:700;
   font-size: 1.75em;
-}
-
-.portfolio-hero img {
-  position: absolute;
-  width: 100%;
-  left: 0;
-  top: -20%;
-  z-index: 1;
-  opacity: 0.6;
 }
 
 /* PORTFOLIO PROJECT INSTANCES */
