--- a/src/About.css
+++ b/src/About.css
@@ -114,9 +114,10 @@
     max-width: 100%;
     margin: 0 1em;
     box-sizing: border-box;
+    text-align: center;
+    /* margin-bottom:0.5em; */
   }
   .about-section h2 {
-    text-align: center;
     margin-bottom:0.5em;
   }
   .contact-section {
