--- a/src/Blog.css
+++ b/src/Blog.css
@@ -43,50 +43,18 @@
 }
 
 .card-deck {
-  margin: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  margin: 3em;
 }
 
 #blog-card {
-  /* min-width: 80%; */
+  width: auto;
+  height: auto;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.256);
-  flex: 0 0 0%;
-  margin-bottom: 50px;
-}
-
-/* CARD DECK OUTRO */
-.deck-end {
-  position: relative;
-  background: #fff;
-  width: 100%;
-  height: 100vh;
-  margin: 50px;
-  flex: 1 0 0%;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.256);
-  /* padding:0; */
-}
-
-.deck-end img {
-  position: absolute;
-  padding: 3em;
-  width: 100%;
-  height: 100%;
-  min-height: 400px;
-  left: 0;
-  z-index: 1;
-  opacity: 0.6;
-  filter: grayscale(100%);
-}
-
-.deck-end h1 {
-  text-align: center;
-  z-index: 2;
-  position: relative;
-  top: 18%;
-  left: 5%;
-  color: rgb(52, 52, 52);
-  font-family: 'Noto Serif';
-  font-weight: 400;
-  font-size: 4em;
+  flex: 0 1 30%;
+  margin-bottom: 2em;
 }
 
 /* CARD IMAGE HOVER */
@@ -95,7 +63,6 @@
   position: relative;
   float: left;
   overflow: hidden;
-  /* min-width: 220px; */
   width: 100%;
   text-align: center;
 }
@@ -131,7 +98,7 @@
 }
 
 #text {
-  font-size:20px;
+  font-size: 20px;
 }
 
 #button {
@@ -140,7 +107,16 @@
 }
 
 /*For Ipad Portrait view and below that*/
+@media (max-width: 995px) {
+#blog-card {
+  flex: 0 1 45%;
+  }
+}
+
 @media (max-width: 768px) {
+  #blog-card {
+    flex: 0 0 100%;
+  }
   .card-image-item * {
     transition: none;
   }
