--- a/src/Portfolio.css
+++ b/src/Portfolio.css
@@ -36,22 +36,26 @@
   display: flex;
   flex-flow: column wrap;
   justify-content: center;
-  align-items: flex-start;
-  margin-bottom: 3em;
+  align-items: center;
+  margin-bottom: 2em;
   height: auto;
   overflow: auto;
-  padding-bottom: 5em;
+  padding-bottom: 2em;
 }
 
 .langly {
   background: #D3D3D3;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 96%, 0 100%);
+  padding-bottom: 6em;
 }
 
 /* PORTFOLIO DESCRIPTIONS */
 .desc {
-  margin: 3em 3em 1em 3em;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  margin: 1em 10em;
   overflow: hidden;
   text-align: left;
   color:rgb(62, 61, 61);
@@ -60,6 +64,7 @@
 }
 
 .desc > .title {
+  text-align: center;
   font-family: 'Noto Serif';
   font-size: 40px;
   font-weight: 700;
@@ -80,13 +85,13 @@
   display: flex;
   flex-wrap: wrap;
   max-width: 100%;
+  margin: 0 10em;
 }
 
 .item {
   position: relative;
   float: left;
   overflow: hidden;
-  margin: 1em 3em;
   width: 100%;
   height: 100%;
   padding: 0;
@@ -143,7 +148,7 @@
   text-align: center;
   display: flex;
   justify-content: space-between;
-  margin: 1em 3em;
+  margin-top: 3em;
   width: 100%;
 }
 
